--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,6 +12,17 @@ jobs:
   Build-And-Test:
     runs-on: ubuntu-latest
     steps:
+      # Necessary to provide enough space for the build to succeed
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be  #v1.3.1
+        with:
+          tool-cache: verbose_failures
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: false
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4.1.1
       - name: Cache Bazel
         uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84  # v3.3.2
